@@ -13,31 +13,43 @@ name: Config-Model-TkUI
 provides:
   Config::Model::Tk::AnyViewer:
     file: lib/Config/Model/Tk/AnyViewer.pm
+    version: 1.305
   Config::Model::Tk::CheckListEditor:
     file: lib/Config/Model/Tk/CheckListEditor.pm
+    version: 1.305
   Config::Model::Tk::CheckListViewer:
     file: lib/Config/Model/Tk/CheckListViewer.pm
+    version: 1.305
   Config::Model::Tk::HashEditor:
     file: lib/Config/Model/Tk/HashEditor.pm
+    version: 1.305
   Config::Model::Tk::HashViewer:
     file: lib/Config/Model/Tk/HashViewer.pm
+    version: 1.305
   Config::Model::Tk::LeafEditor:
     file: lib/Config/Model/Tk/LeafEditor.pm
+    version: 1.305
   Config::Model::Tk::LeafViewer:
     file: lib/Config/Model/Tk/LeafViewer.pm
+    version: 1.305
   Config::Model::Tk::ListEditor:
     file: lib/Config/Model/Tk/ListEditor.pm
+    version: 1.305
   Config::Model::Tk::ListViewer:
     file: lib/Config/Model/Tk/ListViewer.pm
+    version: 1.305
   Config::Model::Tk::NodeEditor:
     file: lib/Config/Model/Tk/NodeEditor.pm
+    version: 1.305
   Config::Model::Tk::NodeViewer:
     file: lib/Config/Model/Tk/NodeViewer.pm
+    version: 1.305
   Config::Model::Tk::Wizard:
     file: lib/Config/Model/Tk/Wizard.pm
+    version: 1.305
   Config::Model::TkUI:
     file: lib/Config/Model/TkUI.pm
-    version: 1.305
+    version: 1.306
 recommends:
   Tk::ObjScanner: 0
 requires:
@@ -50,4 +62,4 @@ requires:
   Tk::Tree: 0
 resources:
   license: http://www.gnu.org/licenses/old-licenses/lgpl-2.1.txt
-version: 1.305
+version: 1.306
